p1p2/p2/submissions/wang/y.output
Terminals unused in grammar

    TOK_ID
    TOK_STRLITERAL
    TOK_INTLITERAL
    TOK_PLUSPLUS
    TOK_MINUSMINUS


Grammar

    0 $accept: Program $end

    1 Program: MainClass

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList MainMethod '}'

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID KW_MAIN '(' MainMethodArgs ')' '{' StatementList '}'

    4 MainMethodArgs: KW_STRING '[' ']' ID

    5 PrimeType: KW_INT
    6          | KW_BOOLEAN
    7          | KW_STRING

    8 Type: PrimeType
    9     | Type '[' ']'

   10 StaticVarDeclList: StaticVarDeclList StaticVarDecl
   11                  | ε

   12 StaticVarDecl: KW_PRIVATE KW_STATIC VarDeclLine

   13 VarDeclLine: Type ID VarInit ExtraVarDecl ';'

   14 ExtraVarDecl: ExtraVarDecl ',' ID VarInit
   15             | ε

   16 VarInit: '=' Exp
   17        | ε

   18 StaticMethodDeclList: StaticMethodDeclList StaticMethodDecl
   19                     | ε

   20 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' FormalList ')' '{' StatementList '}'

   21 MethodCall: ID '(' ExpList ')'
   22           | PARSEINT '(' Exp ')'

   23 FormalList: FormalList ',' FormalVar
   24           | FormalVar
   25           | ε

   26 FormalVar: Type ID

   27 LeftValue: ID Index

   28 StatementList: StatementList Statement
   29              | ε

   30 Statement: VarDeclLine
   31          | '{' StatementList '}'
   32          | KW_IF '(' Exp ')' Statement KW_ELSE Statement
   33          | KW_WHILE '(' Exp ')' Statement
   34          | PRINTLN '(' Exp ')' ';'
   35          | PRINT '(' Exp ')' ';'
   36          | LeftValue '=' Exp ';'
   37          | KW_RETURN Exp ';'
   38          | MethodCall ';'

   39 ExpList: ExpList ',' Exp
   40        | Exp
   41        | ε

   42 ExpL16: '(' Exp ')'
   43       | INT_LITERAL
   44       | STR_LITERAL
   45       | KW_TRUE
   46       | KW_FALSE
   47       | LeftValue LENGTH
   48       | LeftValue
   49       | MethodCall
   50       | KW_NEW PrimeType '[' Exp ']' Index

   51 ExpL14: '+' ExpL14
   52       | '-' ExpL14
   53       | '!' ExpL14
   54       | ExpL16

   55 ExpL12: ExpL12 '*' ExpL14
   56       | ExpL12 '/' ExpL14
   57       | ExpL14

   58 ExpL11: ExpL11 '-' ExpL12
   59       | ExpL11 '+' ExpL12
   60       | ExpL12

   61 ExpL9: ExpL9 '<' ExpL11
   62      | ExpL9 '>' ExpL11
   63      | ExpL9 TOK_LEQ ExpL11
   64      | ExpL9 TOK_GREQ ExpL11
   65      | ExpL11

   66 ExpL8: ExpL8 TOK_NEQ ExpL9
   67      | ExpL8 TOK_EQEQ ExpL9
   68      | ExpL9

   69 ExpL4: ExpL4 TOK_ANDAND ExpL8
   70      | ExpL8

   71 ExpL3: ExpL3 TOK_OROR ExpL4
   72      | ExpL4

   73 Exp: ExpL3

   74 Index: Index '[' Exp ']'
   75      | ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 53
    '(' (40) 3 20 21 22 32 33 34 35 42
    ')' (41) 3 20 21 22 32 33 34 35 42
    '*' (42) 55
    '+' (43) 51 59
    ',' (44) 14 23 39
    '-' (45) 52 58
    '/' (47) 56
    ';' (59) 13 34 35 36 37 38
    '<' (60) 61
    '=' (61) 16 36
    '>' (62) 62
    '[' (91) 4 9 50 74
    ']' (93) 4 9 50 74
    '{' (123) 2 3 20 31
    '}' (125) 2 3 20 31
    error (256)
    KW_BOOLEAN (258) 6
    KW_CLASS (259) 2
    KW_PUBLIC (260) 3 20
    KW_PRIVATE (261) 12
    KW_STATIC (262) 3 12 20
    KW_VOID (263) 3
    KW_STRING (264) 4 7
    KW_INT (265) 5
    KW_IF (266) 32
    KW_ELSE (267) 32
    KW_WHILE (268) 33
    KW_RETURN (269) 37
    KW_NEW (270) 50
    PRINTLN (271) 34
    PRINT (272) 35
    PARSEINT (273) 22
    LENGTH (274) 47
    KW_TRUE (275) 45
    KW_FALSE (276) 46
    TOK_ID (277)
    TOK_STRLITERAL (278)
    TOK_INTLITERAL (279)
    TOK_PLUSPLUS (280)
    TOK_MINUSMINUS (281)
    TOK_ANDAND (282) 69
    TOK_OROR (283) 71
    TOK_GREQ (284) 64
    TOK_LEQ (285) 63
    TOK_EQEQ (286) 67
    TOK_NEQ (287) 66
    INT_LITERAL <integer> (288) 43
    STR_LITERAL <string> (289) 44
    ID <string> (290) 2 4 13 14 20 21 26 27
    KW_MAIN <string> (291) 3


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    Program <node> (54)
        on left: 1
        on right: 0
    MainClass <node> (55)
        on left: 2
        on right: 1
    MainMethod <node> (56)
        on left: 3
        on right: 2
    MainMethodArgs <node> (57)
        on left: 4
        on right: 3
    PrimeType <node> (58)
        on left: 5 6 7
        on right: 8 50
    Type <node> (59)
        on left: 8 9
        on right: 9 13 20 26
    StaticVarDeclList <node> (60)
        on left: 10 11
        on right: 2 10
    StaticVarDecl <node> (61)
        on left: 12
        on right: 10
    VarDeclLine <node> (62)
        on left: 13
        on right: 12 30
    ExtraVarDecl <node> (63)
        on left: 14 15
        on right: 13 14
    VarInit <node> (64)
        on left: 16 17
        on right: 13 14
    StaticMethodDeclList <node> (65)
        on left: 18 19
        on right: 2 18
    StaticMethodDecl <node> (66)
        on left: 20
        on right: 18
    MethodCall <node> (67)
        on left: 21 22
        on right: 38 49
    FormalList <node> (68)
        on left: 23 24 25
        on right: 20 23
    FormalVar <node> (69)
        on left: 26
        on right: 23 24
    LeftValue <node> (70)
        on left: 27
        on right: 36 47 48
    StatementList <node> (71)
        on left: 28 29
        on right: 3 20 28 31
    Statement <node> (72)
        on left: 30 31 32 33 34 35 36 37 38
        on right: 28 32 33
    ExpList <node> (73)
        on left: 39 40 41
        on right: 21 39
    ExpL16 <node> (74)
        on left: 42 43 44 45 46 47 48 49 50
        on right: 54
    ExpL14 <node> (75)
        on left: 51 52 53 54
        on right: 51 52 53 55 56 57
    ExpL12 <node> (76)
        on left: 55 56 57
        on right: 55 56 58 59 60
    ExpL11 <node> (77)
        on left: 58 59 60
        on right: 58 59 61 62 63 64 65
    ExpL9 <node> (78)
        on left: 61 62 63 64 65
        on right: 61 62 63 64 66 67 68
    ExpL8 <node> (79)
        on left: 66 67 68
        on right: 66 67 69 70
    ExpL4 <node> (80)
        on left: 69 70
        on right: 69 71 72
    ExpL3 <node> (81)
        on left: 71 72
        on right: 71 73
    Exp <node> (82)
        on left: 73
        on right: 16 22 32 33 34 35 36 37 39 40 42 50 74
    Index <node> (83)
        on left: 74 75
        on right: 27 50 74


State 0

    0 $accept: • Program $end

    KW_CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: KW_CLASS • ID '{' StaticVarDeclList StaticMethodDeclList MainMethod '}'

    ID  shift, and go to state 4


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass •

    $default  reduce using rule 1 (Program)


State 4

    2 MainClass: KW_CLASS ID • '{' StaticVarDeclList StaticMethodDeclList MainMethod '}'

    '{'  shift, and go to state 6


State 5

    0 $accept: Program $end •

    $default  accept


State 6

    2 MainClass: KW_CLASS ID '{' • StaticVarDeclList StaticMethodDeclList MainMethod '}'

    $default  reduce using rule 11 (StaticVarDeclList)

    StaticVarDeclList  go to state 7


State 7

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList • StaticMethodDeclList MainMethod '}'
   10 StaticVarDeclList: StaticVarDeclList • StaticVarDecl

    KW_PRIVATE  shift, and go to state 8

    $default  reduce using rule 19 (StaticMethodDeclList)

    StaticVarDecl         go to state 9
    StaticMethodDeclList  go to state 10


State 8

   12 StaticVarDecl: KW_PRIVATE • KW_STATIC VarDeclLine

    KW_STATIC  shift, and go to state 11


State 9

   10 StaticVarDeclList: StaticVarDeclList StaticVarDecl •

    $default  reduce using rule 10 (StaticVarDeclList)


State 10

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList • MainMethod '}'
   18 StaticMethodDeclList: StaticMethodDeclList • StaticMethodDecl

    KW_PUBLIC  shift, and go to state 12

    MainMethod        go to state 13
    StaticMethodDecl  go to state 14


State 11

   12 StaticVarDecl: KW_PRIVATE KW_STATIC • VarDeclLine

    KW_BOOLEAN  shift, and go to state 15
    KW_STRING   shift, and go to state 16
    KW_INT      shift, and go to state 17

    PrimeType    go to state 18
    Type         go to state 19
    VarDeclLine  go to state 20


State 12

    3 MainMethod: KW_PUBLIC • KW_STATIC KW_VOID KW_MAIN '(' MainMethodArgs ')' '{' StatementList '}'
   20 StaticMethodDecl: KW_PUBLIC • KW_STATIC Type ID '(' FormalList ')' '{' StatementList '}'

    KW_STATIC  shift, and go to state 21


State 13

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList MainMethod • '}'

    '}'  shift, and go to state 22


State 14

   18 StaticMethodDeclList: StaticMethodDeclList StaticMethodDecl •

    $default  reduce using rule 18 (StaticMethodDeclList)


State 15

    6 PrimeType: KW_BOOLEAN •

    $default  reduce using rule 6 (PrimeType)


State 16

    7 PrimeType: KW_STRING •

    $default  reduce using rule 7 (PrimeType)


State 17

    5 PrimeType: KW_INT •

    $default  reduce using rule 5 (PrimeType)


State 18

    8 Type: PrimeType •

    $default  reduce using rule 8 (Type)


State 19

    9 Type: Type • '[' ']'
   13 VarDeclLine: Type • ID VarInit ExtraVarDecl ';'

    ID   shift, and go to state 23
    '['  shift, and go to state 24


State 20

   12 StaticVarDecl: KW_PRIVATE KW_STATIC VarDeclLine •

    $default  reduce using rule 12 (StaticVarDecl)


State 21

    3 MainMethod: KW_PUBLIC KW_STATIC • KW_VOID KW_MAIN '(' MainMethodArgs ')' '{' StatementList '}'
   20 StaticMethodDecl: KW_PUBLIC KW_STATIC • Type ID '(' FormalList ')' '{' StatementList '}'

    KW_BOOLEAN  shift, and go to state 15
    KW_VOID     shift, and go to state 25
    KW_STRING   shift, and go to state 16
    KW_INT      shift, and go to state 17

    PrimeType  go to state 18
    Type       go to state 26


State 22

    2 MainClass: KW_CLASS ID '{' StaticVarDeclList StaticMethodDeclList MainMethod '}' •

    $default  reduce using rule 2 (MainClass)


State 23

   13 VarDeclLine: Type ID • VarInit ExtraVarDecl ';'

    '='  shift, and go to state 27

    $default  reduce using rule 17 (VarInit)

    VarInit  go to state 28


State 24

    9 Type: Type '[' • ']'

    ']'  shift, and go to state 29


State 25

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID • KW_MAIN '(' MainMethodArgs ')' '{' StatementList '}'

    KW_MAIN  shift, and go to state 30


State 26

    9 Type: Type • '[' ']'
   20 StaticMethodDecl: KW_PUBLIC KW_STATIC Type • ID '(' FormalList ')' '{' StatementList '}'

    ID   shift, and go to state 31
    '['  shift, and go to state 24


State 27

   16 VarInit: '=' • Exp

    KW_NEW       shift, and go to state 32
    PARSEINT     shift, and go to state 33
    KW_TRUE      shift, and go to state 34
    KW_FALSE     shift, and go to state 35
    INT_LITERAL  shift, and go to state 36
    STR_LITERAL  shift, and go to state 37
    ID           shift, and go to state 38
    '('          shift, and go to state 39
    '+'          shift, and go to state 40
    '-'          shift, and go to state 41
    '!'          shift, and go to state 42

    MethodCall  go to state 43
    LeftValue   go to state 44
    ExpL16      go to state 45
    ExpL14      go to state 46
    ExpL12      go to state 47
    ExpL11      go to state 48
    ExpL9       go to state 49
    ExpL8       go to state 50
    ExpL4       go to state 51
    ExpL3       go to state 52
    Exp         go to state 53


State 28

   13 VarDeclLine: Type ID VarInit • ExtraVarDecl ';'

    $default  reduce using rule 15 (ExtraVarDecl)

    ExtraVarDecl  go to state 54


State 29

    9 Type: Type '[' ']' •

    $default  reduce using rule 9 (Type)


State 30

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID KW_MAIN • '(' MainMethodArgs ')' '{' StatementList '}'

    '('  shift, and go to state 55


State 31

   20 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID • '(' FormalList ')' '{' StatementList '}'

    '('  shift, and go to state 56


State 32

   50 ExpL16: KW_NEW • PrimeType '[' Exp ']' Index

    KW_BOOLEAN  shift, and go to state 15
    KW_STRING   shift, and go to state 16
    KW_INT      shift, and go to state 17

    PrimeType  go to state 57


State 33

   22 MethodCall: PARSEINT • '(' Exp ')'

    '('  shift, and go to state 58


State 34

   45 ExpL16: KW_TRUE •

    $default  reduce using rule 45 (ExpL16)


State 35

   46 ExpL16: KW_FALSE •

    $default  reduce using rule 46 (ExpL16)


State 36

   43 ExpL16: INT_LITERAL •

    $default  reduce using rule 43 (ExpL16)


State 37

   44 ExpL16: STR_LITERAL •

    $default  reduce using rule 44 (ExpL16)


State 38

   21 MethodCall: ID • '(' ExpList ')'
   27 LeftValue: ID • Index

    '('  shift, and go to state 59

    $default  reduce using rule 75 (Index)

    Index  go to state 60


State 39

   42 ExpL16: '(' • Exp ')'

    KW_NEW       shift, and go to state 32
    PARSEINT     shift, and go to state 33
    KW_TRUE      shift, and go to state 34
    KW_FALSE     shift, and go to state 35
    INT_LITERAL  shift, and go to state 36
    STR_LITERAL  shift, and go to state 37
    ID           shift, and go to state 38
    '('          shift, and go to state 39
    '+'          shift, and go to state 40
    '-'          shift, and go to state 41
    '!'          shift, and go to state 42

    MethodCall  go to state 43
    LeftValue   go to state 44
    ExpL16      go to state 45
    ExpL14      go to state 46
    ExpL12      go to state 47
    ExpL11      go to state 48
    ExpL9       go to state 49
    ExpL8       go to state 50
    ExpL4       go to state 51
    ExpL3       go to state 52
    Exp         go to state 61


State 40

   51 ExpL14: '+' • ExpL14

    KW_NEW       shift, and go to state 32
    PARSEINT     shift, and go to state 33
    KW_TRUE      shift, and go to state 34
    KW_FALSE     shift, and go to state 35
    INT_LITERAL  shift, and go to state 36
    STR_LITERAL  shift, and go to state 37
    ID           shift, and go to state 38
    '('          shift, and go to state 39
    '+'          shift, and go to state 40
    '-'          shift, and go to state 41
    '!'          shift, and go to state 42

    MethodCall  go to state 43
    LeftValue   go to state 44
    ExpL16      go to state 45
    ExpL14      go to state 62


State 41

   52 ExpL14: '-' • ExpL14

    KW_NEW       shift, and go to state 32
    PARSEINT     shift, and go to state 33
    KW_TRUE      shift, and go to state 34
    KW_FALSE     shift, and go to state 35
    INT_LITERAL  shift, and go to state 36
    STR_LITERAL  shift, and go to state 37
    ID           shift, and go to state 38
    '('          shift, and go to state 39
    '+'          shift, and go to state 40
    '-'          shift, and go to state 41
    '!'          shift, and go to state 42

    MethodCall  go to state 43
    LeftValue   go to state 44
    ExpL16      go to state 45
    ExpL14      go to state 63


State 42

   53 ExpL14: '!' • ExpL14

    KW_NEW       shift, and go to state 32
    PARSEINT     shift, and go to state 33
    KW_TRUE      shift, and go to state 34
    KW_FALSE     shift, and go to state 35
    INT_LITERAL  shift, and go to state 36
    STR_LITERAL  shift, and go to state 37
    ID           shift, and go to state 38
    '('          shift, and go to state 39
    '+'          shift, and go to state 40
    '-'          shift, and go to state 41
    '!'          shift, and go to state 42

    MethodCall  go to state 43
    LeftValue   go to state 44
    ExpL16      go to state 45
    ExpL14      go to state 64


State 43

   49 ExpL16: MethodCall •

    $default  reduce using rule 49 (ExpL16)


State 44

   47 ExpL16: LeftValue • LENGTH
   48       | LeftValue •

    LENGTH  shift, and go to state 65

    $default  reduce using rule 48 (ExpL16)


State 45

   54 ExpL14: ExpL16 •

    $default  reduce using rule 54 (ExpL14)


State 46

   57 ExpL12: ExpL14 •

    $default  reduce using rule 57 (ExpL12)


State 47

   55 ExpL12: ExpL12 • '*' ExpL14
   56       | ExpL12 • '/' ExpL14
   60 ExpL11: ExpL12 •

    '*'  shift, and go to state 66
    '/'  shift, and go to state 67

    $default  reduce using rule 60 (ExpL11)


State 48

   58 ExpL11: ExpL11 • '-' ExpL12
   59       | ExpL11 • '+' ExpL12
   65 ExpL9: ExpL11 •

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69

    $default  reduce using rule 65 (ExpL9)


State 49

   61 ExpL9: ExpL9 • '<' ExpL11
   62      | ExpL9 • '>' ExpL11
   63      | ExpL9 • TOK_LEQ ExpL11
   64      | ExpL9 • TOK_GREQ ExpL11
   68 ExpL8: ExpL9 •

    TOK_GREQ  shift, and go to state 70
    TOK_LEQ   shift, and go to state 71
    '<'       shift, and go to state 72
    '>'       shift, and go to state 73

    $default  reduce using rule 68 (ExpL8)


State 50

   66 ExpL8: ExpL8 • TOK_NEQ ExpL9
   67      | ExpL8 • TOK_EQEQ ExpL9
   70 ExpL4: ExpL8 •

    TOK_EQEQ  shift, and go to state 74
    TOK_NEQ   shift, and go to state 75

    $default  reduce using rule 70 (ExpL4)


State 51

   69 ExpL4: ExpL4 • TOK_ANDAND ExpL8
   72 ExpL3: ExpL4 •

    TOK_ANDAND  shift, and go to state 76

    $default  reduce using rule 72 (ExpL3)


State 52

   71 ExpL3: ExpL3 • TOK_OROR ExpL4
   73 Exp: ExpL3 •

    TOK_OROR  shift, and go to state 77

    $default  reduce using rule 73 (Exp)


State 53

   16 VarInit: '=' Exp •

    $default  reduce using rule 16 (VarInit)


State 54

   13 VarDeclLine: Type ID VarInit ExtraVarDecl • ';'
   14 ExtraVarDecl: ExtraVarDecl • ',' ID VarInit

    ';'  shift, and go to state 78
    ','  shift, and go to state 79


State 55

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID KW_MAIN '(' • MainMethodArgs ')' '{' StatementList '}'

    KW_STRING  shift, and go to state 80

    MainMethodArgs  go to state 81


State 56

   20 StaticMethodDecl: KW_PUBLIC KW_STATIC Type ID '(' • FormalList ')' '{' StatementList '}'

    KW_BOOLEAN  shift, and go to state 15
    KW_STRING   shift, and go to state 16
    KW_INT      shift, and go to state 17

    $default  reduce using rule 25 (FormalList)

    PrimeType   go to state 18
    Type        go to state 82
    FormalList  go to state 83
    FormalVar   go to state 84


State 57

   50 ExpL16: KW_NEW PrimeType • '[' Exp ']' Index

    '['  shift, and go to state 85


State 58
